# Simple_Text_Editor

./: CMakeLists.txt  README.md
include/: ConfigurationManager.hpp  MainWindow.hpp
include/text_formatter/: BoldFormatter.hpp  CapitalizeFormatter.hpp  ITextFormatter.hpp  ItalicFormatter.hpp  LowerCaseFormatter.hpp  PlainFormatter.hpp  UnderlineFormatter.hpp  UpperCaseFormatter.hpp
src/: MainWindow.cpp  main.cpp
